--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
         <div>
             <nav class="navbar navbar-light bg-light">
                 <a class="navbar-brand" href="#">
-                    
-                    AES System
+                    WiriteLinggle
                 </a>
             </nav>
         </div>
