--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                                 <div  class="progress-bar progress-bar-striped  text-center " role="progressbar" style="width: 16.6%" id='c2'>C2</div>
                             </div>
                             <div class="progress" style="height: 25px;" id='score_1'>
-                                <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 70%">70%</div>
+                                <div id='score-bar' class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 70%">70%</div>
                             </div>
                         </div>
                             
