--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div>
             <nav class="navbar navbar-light bg-light">
                 <a class="navbar-brand" href="#">
-                    WiriteLinggle
+                    WriteLinggle
                 </a>
             </nav>
         </div>
